# golem-tasks-python

./: .gitignore  README.md  pyproject.toml
examples/: hello_world.py
golem_tasks/: __main__.py  run.py
golem_tasks/cli/: __init__.py
